<resources>
    <string name="app_name">Movie Catalogue (UI/UX)</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="release_date">Release Date</string>
    <string name="directed_by">Directed By</string>
    <string name="produced_by">Produced By</string>
    <string name="screenplay_by">Screenplay By</string>
    <string name="based_on">Based On</string>
    <string name="starring">Starring</string>
    <string name="cinematography">Cinematography</string>
    <string name="edited_by">Edited By</string>
    <string name="production_companies">Production Companies</string>
    <string name="distributed_by">Distributed By</string>
    <string name="running_time">Running Time</string>
    <string name="ratings">Ratings</string>
    <string name="synopsis">Synopsis</string>
    <string name="music_by">Music By</string>
    <string name="photo">Photo</string>
    <string name="share">Share</string>
    <string name="watch">Watch</string>
    <string-array name="data_title_movie">
        <item>Avengers: Infinity Wars</item>
        <item>Deadpool</item>
        <item>Dragon Ball Super: Broly</item>
        <item>Venom</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Avengers: End Game</item>
        <item>Guardians Of The Galaxy Vol. 1</item>
        <item>Spider-Man: Far From Home</item>
        <item>One Piece Film: Z</item>
        <item>Kimi No Nawa</item>
        
        <item>Breaking Bad</item>
        <item>Fullmetal Alchemist Brotherhood</item>
        <item>Game Of Thrones</item>
        <item>Gintama</item>
        <item>Dare Devil</item>
        <item>Sherlock</item>
        <item>Shingeki No Kyojin</item>
        <item>The Walking Dead</item>
        <item>One Piece</item>
        <item>Steins Gate</item>
    </string-array>
    <string-array name="data_ratings_movie">
        <item>8.5 / 10.0</item>
        <item>8.0 / 10.0</item>
        <item>8.0 / 10.0</item>
        <item>8.0 / 10.0</item>
        <item>8.5 / 10.0</item>
        <item>8.7 / 10.0</item>
        <item>8.1 / 10.0</item>
        <item>8.1 / 10.0</item>
        <item>8.0 / 10.0</item>
        <item>8.4 / 10.0</item>
        
        <item>9.5 / 10.0</item>
        <item>9.2 / 10.0</item>
        <item>9.4 / 10.0</item>
        <item>9.1 / 10.0</item>
        <item>8.7 / 10.0</item>
        <item>9.1 / 10.0</item>
        <item>9.1 / 10.0</item>
        <item>8.3 / 10.0</item>
        <item>8.5 / 10.0</item>
        <item>9.1 / 10.0</item>
    </string-array>
    <string-array name="data_directed_by_movie">
        <item>Anthony Russo\nJoe Russo</item>
        <item>Tim Miller</item>
        <item>Tatsuya Nagamine</item>
        <item>Ruben Fleischer</item>
        <item>Bob Persichetti\nPeter Ramsey\nRodney Rothman</item>
        <item>Anthony Russo\nJoe Russo</item>
        <item>James Gunn</item>
        <item>Jon Watts</item>
        <item>Tatsuya Nagamine</item>
        <item>Makoto Shinkai</item>
        
        <item>Vince Gilligan</item>
        <item>Hiromu Arakawa</item>
        <item>Showrunners D. B. Weiss\nDavid Benioff</item>
        <item>Shinji Takamatsu\nYoichi Fujita\nChizuru Miyawaki</item>
        <item>Phil Abraham\nAdam Kane</item>
        <item>Paul McGuigan\nEuros Lyn</item>
        <item>Tetsurō Araki\nMasashi Koizuka</item>
        <item>Michelle MacLaren\nGwyneth Horder-Payton\nJohan Renck\nErnest Dickerson\nGuy Ferland</item>
        <item>Kōnosuke Uda\nJunji Shimizu\nMunehisa Sakai\nHiroaki Miyamoto\nToshinori Fukazawa\nSatoshi Itō\nTatsuya Nagamine</item>
        <item>Hiroshi Hamasaki\nTakuya Satō</item>
    </string-array>
    <string-array name="data_produced_by_movie">
        <item>Kevin Feige</item>
        <item>Simon Kinberg\nRyan Reynolds\nLauren Shuler Donner</item>
        <item>Toei Animation</item>
        <item>Avi Arad\nMatt Tolmach\nAmy Pascal</item>
        <item>Avi Arad\nAmy Pascal\nPhil Lord\nChristoper Miller\n Christoper Steinberg</item>
        <item>Kevin Feige</item>
        <item>Kevin Feige</item>
        <item>Kevin Feige\nAmy Pascal</item>
        <item>Yoshihiko Taneda\nMakoto Seino</item>
        <item>Noritaka Kawaguchi\nGenki Kawamura</item>
        
        <item>Vince Gilligan</item>
        <item>-</item>
        <item>Mark Huffam\nJoanna Burn\nFrank Doelger\nChris Newman\nGreg Spence\nLisa McAtackney\nBryan Cogman\nDuncan Muggoch</item>
        <item>-</item>
        <item>Marvel Television</item>
        <item>British network BBC</item>
        <item>Tetsuya Kinoshita\nKensuke Tateishi\nGeorge Wada\nToshihiro Maeda\nShin Furukawa\nTomohito Nagase\nTetsuya Endō\nYasuyuki Nishiya\nSoya Kiyota</item>
        <item>AMC Studios</item>
        <item>Tetsuo Daitoku\nHidekazu Terakawa</item>
        <item>Kenjirō Gomi\nTakayuki Matsunaga\nYoshito Danno\nShinsaku Tanaka\nKozue Kananiwa\nYoshinao Doi</item>
    </string-array>
    <string-array name="data_screenplay_movie">
        <item>Christopher Markus\nStephen McFeely</item>
        <item>-</item>
        <item>Akira Toriyama</item>
        <item>Jeff Pinkner\nScott Rosenberg\nKelly Marcel</item>
        <item>Phil Lord\nRodney Rothman</item>
        <item>Christopher Markus\nStephen McFeely</item>
        <item>-</item>
        <item>-</item>
        <item>Osamu Suzuki</item>
        <item>Makoto Shinkai</item>
        
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
    </string-array>
    <string-array name="data_based_on_movie">
        <item>The Avengers\nby Stan Lee\nJack Kirby</item>
        <item>Deadpool\nby Fabian Nicieza, Rob Liefeld</item>
        <item>Dragon Ball\nby Akira Toriyama</item>
        <item>Venom\nby Todd McFarlane, David Michelinie</item>
        <item>Spider-Man\nby Stan Lee</item>
        <item>The Avengers\nby Stan Lee\nJack Kirby</item>
        <item>Guardians of the Galaxy\nbyDan Abnett, Andy Lanning</item>
        <item>Spider-Man\nby Stan Lee, Steve Ditko</item>
        <item>	One Piece\nby Eiichiro Oda</item>
        <item>-</item>
        
        <item>-</item>
        <item>-</item>
        <item>A Song of Ice and Fire\nby George R. R. Martin</item>
        <item>Harada Sanosuke</item>
        <item>Daredevil\nby Stan Lee, Bill Everett</item>
        <item>Sherlock Holmes\nby Sir Arthur Conan Doyle</item>
        <item>-</item>
        <item>The Walking Dead\nby Robert Kirkman, Tony Moore</item>
        <item>One Piece\nby Eiichiro Oda</item>
        <item>-</item>
    </string-array>
    <string-array name="data_starring_movie">
        <item>Robert Downey Jr.\nChris Hemsworth\nMark Ruffalo\nChris Evans\nScarlett Johansson\nBenedict Cumberbatch\nDon Cheadle\nTom Holland\nChadwick Boseman\nPaul Bettany\nElizabeth Olsen\nAnthony Mackie\nSebastian Stan\nDanai Gurira\nLetitia Wright\nDave Bautista\nZoe Saldana\nJosh Brolin\nChris Pratt</item>
        <item>Ryan Reynolds\nMorena Baccarin\nEd Skrein\nT. J. Miller\nGina Carano\nBrianna Hildebrand</item>
        <item>Masako Nozawa\nRyō Horikawa\nBin Shimada\nRyūsei Nakao\nAya Hisakawa\nToshio Furukawa\nTakeshi Kusao\nKōichi Yamadera\nMasakazu Morita\nKatsuhisa Hōki</item>
        <item>Tom Hardy\nMichelle Williams\nRiz Ahmed\nScott Haze\nReid Scott</item>
        <item>Shameik Moore\nJake Johnson\nHailee Steinfeld\nMahershala Ali\nBrian Tyree Henry\nLily Tomlin\nLuna Lauren Velez\nJohn Mulaney\nKimiko Glenn\nNicolas Cage\nLiev Schreiber</item>
        <item>Robert Downey Jr.\nChris Hemsworth\nMark Ruffalo\nChris Evans\nScarlett Johansson\nBenedict Cumberbatch\nDon Cheadle\nTom Holland\nChadwick Boseman\nPaul Bettany\nElizabeth Olsen\nAnthony Mackie\nSebastian Stan\nDanai Gurira\nLetitia Wright\nDave Bautista\nZoe Saldana\nJosh Brolin\nChris Pratt</item>
        <item>Chris Pratt\nZoe Saldana\nDave Bautista\nVin Diesel\nBradley Cooper\nLee Pace\nMichael Rooker\nKaren Gillan\nDjimon Hounsou\nJohn C. Reilly\nGlenn Close\nBenicio del Toro</item>
        <item>Tom Holland\nSamuel L. Jackson\nZendaya\nCobie Smulders\nJon Favreau\nJ. B. Smoove\nJacob Batalon\nMartin Starr\nMarisa Tomei\nJake Gyllenhaal</item>
        <item>Mayumi Tanaka\nKazuya Nakai\nAkemi Okamura\nKappei Yamaguchi\nHiroaki Hirata\nIkue Ohtani\nYuriko Yamaguchi\nKazuki Yao\nChō\nHōchū Ōtsuka\nRyoko Shinohara\nTeruyuki Kagawa</item>
        <item>Ryunosuke Kamiki\nMone Kamishiraishi\nRyo Narita\nAoi Yūki\nNobunaga Shimazaki\nKaito Ishikawa\nKanon Tani\nMasami Nagasawa\nEtsuko Ichihara</item>
        
        <item>Bryan Cranston\nAnna Gunn\nAaron Paul\nDean Norris\nBetsy Brandt\nRJ Mitte\nBob Odenkirk\nGiancarlo Esposito\nJonathan Banks\nLaura Fraser\nJesse Plemons</item>
        <item>-</item>
        <item>Eddard \"Ned\" Stark\nRobert Baratheon\nJaime Lannister\nCatelyn Stark\nCersei Lannister\nDaenerys Targaryen\nJorah Mormont\nViserys Targaryen\nJon Snow\nSansa Stark</item>
        <item>-</item>
        <item>Charlie Cox\nDeborah Ann Woll\nElden Henson\nToby Leonard Moore\nVondie Curtis-Hall\nBob Gunton\nAyelet Zurer\nRosario Dawson\nVincent D\'Onofrio\nJon Bernthal\nÉlodie Yung\nStephen Rider\nJoanne Whalley\nJay Ali\nWilson Bethel</item>
        <item>Benedict Cumberbatch\nMartin Freeman\nRupert Graves\nUna Stubbs\nMark Gatiss\nLouise Brealey\nAndrew Scott\nAmanda Abbington</item>
        <item>-</item>
        <item>Andrew Lincoln\nJon Bernthal\nSarah Wayne Callies\nLaurie Holden\nJeffrey DeMunn\nSteven Yeun\nChandler Riggs\nNorman Reedus\nLauren Cohan\nDanai Gurira\nMichael Rooker\nDavid Morrissey\nMelissa McBride\nScott Wilson\nMichael Cudlitz\nEmily Kinney\nChad L. Coleman\nLennie James\nSonequa Martin-Green\nJeffrey Dean Morgan\nAlanna Masterson\nJosh McDermitt\nChristian Serratos\nSeth Gilliam\nRoss Marquand\nKatelyn Nacon\nTom Payne\nKhary Payton\nSamantha Morton</item>
        <item>-</item>
        <item>-</item>
    </string-array>
    <string-array name="data_music_by_movie">
        <item>Alan Silvestri</item>
        <item>Tom Holkenborg</item>
        <item>Norihito Sumitomo</item>
        <item>Ludwig Göransson</item>
        <item>Daniel Pemberton</item>
        <item>Alan Silvestri</item>
        <item>Tyler Bates</item>
        <item>Michael Giacchino</item>
        <item>Kohei Tanaka\nShirō Hamaguchi</item>
        <item>Radwimps</item>
        
        <item>-</item>
        <item>-</item>
        <item>Ramin Djawadi</item>
        <item>Audio Highs</item>
        <item>John Paesano\nBraden Kimball</item>
        <item>David Arnold\nMichael Price.</item>
        <item>Hiroyuki Sawano</item>
        <item>Bear McCreary</item>
        <item>Toshiya Motomichi</item>
        <item>Jun Murakami\nTakeshi Abo</item>
    </string-array>
    <string-array name="data_cinematography_movie">
        <item>Trent Opaloch</item>
        <item>Ken Seng</item>
        <item>-</item>
        <item>Matthew Libatique</item>
        <item>-</item>
        <item>Trent Opaloch</item>
        <item>Ben Davis</item>
        <item>Matthew J. Lloyd</item>
        <item>Takeo Ogiwara</item>
        <item>Makoto Shinkai</item>
        
        <item>Michael Slovis\nReynaldo Villalobos\nArthur Albert\nJohn Toll\nNelson Cragg</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>Matthew J. Lloyd\nMartin Ahlgren\nPetr Hlinomaz</item>
        <item>Fabian Wagner\nSteve Lawes</item>
        <item>-</item>
        <item>Rohn Schmidt\nDavid Boyd\nMichael E. Satrazemis\nStephen Campbell\nDavid Tattersall</item>
        <item>-</item>
        <item>-</item>
    </string-array>
</resources>