<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardBackgroundColor="#8CFFFFFF"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <com.example.moviecatalogueuiux.ImageCornerRadius
            android:id="@+id/img_item_photo"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:scaleType="fitXY"
            tools:src="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@id/img_item_photo"
            android:fontFamily="@font/firasans"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Heroes Name" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@id/img_item_photo"
            android:ellipsize="end"
            android:fontFamily="@font/firasans"
            android:maxLines="3"
            tools:text="Description" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_description"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/img_item_photo">

            <TableRow>

                <TextView
                    android:fontFamily="@font/firasans"
                    android:text="@string/release_date"
                    android:textSize="12sp" />

                <TextView
                    android:fontFamily="@font/firasans"
                    android:text=" : "
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/release_date"
                    android:fontFamily="@font/firasans"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow android:layout_marginTop="4dp">

                <TextView
                    android:fontFamily="@font/firasans"
                    android:text="@string/ratings"
                    android:textSize="12sp" />

                <TextView
                    android:fontFamily="@font/firasans"
                    android:text=" : "
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/ratings"
                    android:fontFamily="@font/firasans"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow android:layout_marginTop="4dp">

                <TextView
                    android:fontFamily="@font/firasans"
                    android:text="@string/running_time"
                    android:textSize="12sp" />

                <TextView
                    android:fontFamily="@font/firasans"
                    android:text=" : "
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/running_time"
                    android:fontFamily="@font/firasans"
                    android:textSize="12sp" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>